--- a/app/page.css
+++ b/app/page.css
@@ -1,4 +1,3 @@
-header,
 section,
 footer {
   max-width: 1920px;
@@ -13,18 +12,27 @@ main {
   display: grid;
   text-align: center;
   place-items: center;
-  gap: 24px;
+  gap: 16px;
+  position: relative;
+}
+
+main > img:first-of-type {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  opacity: 0.2;
+  transform: translate(25%, -25%) rotate(25deg);
+}
+
+main > header {
+  display: grid;
+  padding: 48px 0 0 0;
 }
 
 main > header > hr {
   width: 400px;
   opacity: 0.8;
-}
-
-main > header {
-  display: grid;
-  padding: 28px 0 0 0;
-  position: relative;
 }
 
 main > header > h1 {
@@ -34,13 +42,6 @@ main > header > h1 {
 main > header > h2 {
   font-size: 2rem;
   margin: 0 0 110px 0;
-}
-
-main > header > img {
-  position: absolute;
-  top: -8px;
-  left: 50%;
-  transform: translateX(-20%);
 }
 
 .image-container {
@@ -62,6 +63,18 @@ main > header > img {
 
 .image-container > img:last-of-type {
   border-radius: 24px;
+}
+
+#menus {
+  position: relative;
+}
+
+#menus > img:first-of-type {
+  position: absolute;
+  z-index: -1;
+  top: 60px;
+  transform: translateX(-28%);
+  opacity: 0.2;
 }
 
 #menus article {
@@ -86,7 +99,7 @@ main > header > img {
 }
 
 #sandwichs > h2 {
-  margin: 0 0 64px 0;
+  margin: 0 0 16px 0;
 }
 
 .card-list {
@@ -95,11 +108,11 @@ main > header > img {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(var(--card-size), 1fr));
   gap: 32px;
+  margin: 0 10vw;
 }
 
 .card-list > li {
   display: grid;
-  /* padding: 16px; */
   background-color: var(--surface);
   border-radius: var(--radius);
 }
@@ -139,10 +152,145 @@ main > header > img {
   border-radius: 0 12px 0 12px;
 }
 
-.satisfaction > hgroup {
+.google-reviews {
+  padding: 8px 16px;
+  place-self: center;
+  transform: translateY(70%);
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  background-color: var(--on-background);
+  border-radius: 16px;
+  line-height: 20px;
+
+  > .note {
+    color: #e8711c;
+    font-weight: bold;
+    font-size: 18px;
+  }
+
+  > span {
+    transform: scale(1.3);
+    clip-path: polygon(
+      6px 0,
+      4.31px 3.98px,
+      0 4.34px,
+      3.28px 7.18px,
+      2.29px 11.4px,
+      6px 9.16px,
+      9.71px 11.4px,
+      8.72px 7.18px,
+      12px 4.34px,
+      7.69px 3.98px,
+      6px 0,
+      20px 0,
+      18.31px 3.98px,
+      14px 4.34px,
+      17.28px 7.18px,
+      16.29px 11.4px,
+      20px 9.16px,
+      23.71px 11.4px,
+      22.72px 7.18px,
+      26px 4.34px,
+      21.69px 3.98px,
+      20px 0,
+      34px 0,
+      32.31px 3.98px,
+      28px 4.34px,
+      31.28px 7.18px,
+      30.29px 11.4px,
+      34px 9.16px,
+      37.71px 11.4px,
+      36.72px 7.18px,
+      40px 4.34px,
+      35.69px 3.98px,
+      34px 0,
+      48px 0,
+      46.31px 3.98px,
+      42px 4.34px,
+      45.28px 7.18px,
+      44.29px 11.4px,
+      48px 9.16px,
+      51.71px 11.4px,
+      50.72px 7.18px,
+      54px 4.34px,
+      49.69px 3.98px,
+      48px 0,
+      62px 0,
+      60.31px 3.98px,
+      56px 4.34px,
+      59.28px 7.18px,
+      58.29px 11.4px,
+      62px 9.16px,
+      65.71px 11.4px,
+      64.72px 7.18px,
+      68px 4.34px,
+      63.69px 3.98px,
+      62px 0
+    );
+    color: #e8711c;
+    display: inline-block;
+    width: 68px;
+    height: 11.4px;
+    background: linear-gradient(to right, currentcolor 62px, #80868b 0%);
+  }
+
+  > a {
+    color: var(--background);
+  }
+}
+
+.satisfaction {
+  background-color: var(--on-background);
+}
+
+.review-list {
   display: grid;
   gap: 24px;
+  place-content: center;
+  position: relative;
+}
+
+.review-list li {
+  width: 400px;
+  height: 300px;
+  border-radius: 16px;
+  border: 1px solid black;
+  position: sticky;
+  top: 24px;
+  background-color: var(--on-background);
+  transform-origin: top left;
+  animation-timeline: view();
+  animation-name: stack;
+  --translate: 0px;
+}
+
+@keyframes stack {
+  50% {
+    transform: translateX(0);
+  }
+
+  90% {
+    transform: translateX(var(--translate));
+  }
+}
+
+.review-list li:nth-child(1) {
+  --translate: -50px;
+}
+
+.review-list li:nth-child(2) {
+  --translate: -25px;
+}
+
+.satisfaction > hgroup {
+  display: grid;
+  gap: 32px;
   margin: 0 10vw;
+}
+
+.satisfaction > hgroup > p {
+  color: var(--background);
 }
 
 .satisfaction > hgroup > a {
