--- a/app/page.css
+++ b/app/page.css
@@ -407,6 +407,13 @@ footer > h2 {
   }
 }
 
+@media (max-width: 425px) {
+  main > img:first-of-type {
+    width: 300px;
+    opacity: 0.3;
+  }
+}
+
 @keyframes slide {
   from {
     opacity: 0;
