--- a/app/page.css
+++ b/app/page.css
@@ -14,7 +14,7 @@ main {
   place-items: center;
   gap: 16px;
   position: relative;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 main > img:first-of-type {
@@ -375,6 +375,25 @@ footer > h2 {
   .card-list {
     grid-template-columns: 1fr;
   }
+}
+
+@media (max-width: 500px) {
+  main > header > h1 {
+    font-size: clamp(2rem, -2.7143rem + 18.2857vw, 3rem);
+  }
+
+  main > header > h2 {
+    font-size: clamp(1rem, -2.7143rem + 18.2857vw, 3rem);
+  }
+
+  main > header > hr {
+    width: 100px;
+  }
+
+  main > img:first-of-type {
+    width: 300px;
+    opacity: 0.3;
+  }
 
   .review-list li {
     width: 80vw;
@@ -404,25 +423,6 @@ footer > h2 {
 
   to {
     transform: translateY(0px);
-  }
-}
-
-@media (max-width: 500px) {
-  main > header > h1 {
-    font-size: clamp(2rem, -2.7143rem + 18.2857vw, 3rem);
-  }
-
-  main > header > h2 {
-    font-size: clamp(1rem, -2.7143rem + 18.2857vw, 3rem);
-  }
-
-  main > header > hr {
-    width: 100px;
-  }
-
-  main > img:first-of-type {
-    width: 300px;
-    opacity: 0.3;
   }
 }
 
