--- a/app/page.css
+++ b/app/page.css
@@ -56,7 +56,6 @@ main > header > h2 {
 }
 
 .image-container > img:first-of-type {
-  z-index: 1;
   justify-self: center;
   border-radius: 50%;
   transform: translateY(-35%);
@@ -79,29 +78,57 @@ main > header > h2 {
   opacity: 0.2;
 }
 
-#menus article {
-  max-width: 500px;
-  margin-inline: auto;
+#menus > h2,
+#sandwichs > h2 {
+  font-size: 2.5rem;
+  margin: 0 0 24px 0;
+
+  > strong {
+    color: oklch(from var(--accent) l calc(c + 0.1) h);
+  }
 }
 
-#menus article p:last-child {
-  text-align: center;
-  color: var(--accent);
-  font-size: 1.2rem;
+#menus article {
+  margin-inline: auto;
+  width: 500px;
+  min-height: 200px;
+}
+
+#menus article h3 {
+  font-size: 1.8rem;
+  margin-bottom: 16px;
 }
 
 #menus article strong {
-  font-size: 24px;
+  font-size: 1.3rem;
   font-weight: 600;
   color: oklch(from var(--accent) l calc(c + 0.1) h);
 }
 
-.menu-list {
-  --card-size: 220px;
+#menus article {
+  & p:nth-of-type(2),
+  p:nth-of-type(3) {
+    font-size: 1.1rem;
+  }
 }
 
-#sandwichs > h2 {
-  margin: 0 0 16px 0;
+#menus article p:last-child,
+.price {
+  justify-self: right;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 8px 16px;
+  place-self: start end;
+  color: var(--accent);
+  background-color: var(--background);
+  box-shadow: 0 0 0 8px var(--background);
+  border: 2px solid var(--accent);
+  border-radius: 12px 0px 12px 0px;
+  translate: 25px 18px;
+}
+
+.menu-list {
+  --card-size: 220px;
 }
 
 .card-list {
@@ -148,16 +175,8 @@ main > header > h2 {
 }
 
 .price {
-  justify-self: right;
-  font-size: 20px;
-  font-weight: 600;
-  padding: 8px 16px;
-  place-self: start end;
-  color: var(--accent);
-  background-color: var(--background);
-  box-shadow: 0 0 0 8px var(--background);
-  border: 2px solid var(--accent);
-  border-radius: 0 12px 0 12px;
+  border-radius: 0 12px;
+  translate: 0;
 }
 
 .google-reviews {
@@ -347,23 +366,54 @@ main > header > h2 {
   gap: 32px;
 }
 
-.satisfaction > hgroup > p {
+.satisfaction > p {
   color: var(--background);
 }
 
-.satisfaction > hgroup > a {
+.satisfaction > a {
   font-weight: bold;
+  width: 100px;
+  margin: auto;
+  transition: all 250ms ease;
+  color: rgb(53, 53, 53);
+
+  &:hover {
+    border-color: black;
+    color: black;
+  }
 }
 
 footer {
-  grid-template-columns: repeat(3, 1fr);
-  place-items: start;
+  > h2 {
+    width: 100%;
+    text-align: center;
+  }
 }
 
-footer > h2 {
-  grid-column: 1 / span 3;
-  width: 100%;
-  text-align: center;
+footer > section {
+  > h3 {
+    font-size: 1.7rem;
+    color: oklch(from var(--accent) l calc(c + 0.1) h);
+  }
+
+  > h2 {
+    font-size: 2rem;
+  }
+}
+
+footer > table {
+  text-align: left;
+
+  th {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+
+  th,
+  td {
+    padding: 1rem;
+    vertical-align: top;
+  }
 }
 
 @media (max-width: 900px) {
